--- a/frontend/css/contact-me-devices.css
+++ b/frontend/css/contact-me-devices.css
@@ -339,6 +339,8 @@ h1 {
   padding-top: 0.5rem;
   margin-top: 3rem;
   background-color: rgb(132, 132, 132);
+  font-family: 'Raleway';
+
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 5px solid rgb(255, 51, 0); */
