--- a/frontend/css/jewelry-workshop-devices.css
+++ b/frontend/css/jewelry-workshop-devices.css
@@ -301,6 +301,7 @@ h1 {
   font-size: 1.2rem;
   padding: 1rem;
   box-sizing: border-box;
+  font-family: 'Raleway';
   padding: 30px;
 
   /* ~~~~ FOR DEBUGGING~~~~ */
@@ -340,6 +341,7 @@ h1 {
   font-size: 1.2rem;
   padding: 1rem;
   z-index: 3;
+  font-family: 'Raleway';
   align-self: center;
 
   background-color: rgba(245, 245, 220, 0.9);
@@ -398,6 +400,9 @@ h1 {
   max-width: 100%;
   padding-top: 0.5rem;
   background-color: rgb(132, 132, 132);
+  font-family: 'Raleway';
+
+
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 3px solid rgb(4, 255, 0); */
