--- a/frontend/css/policies-mobile.css
+++ b/frontend/css/policies-mobile.css
@@ -387,6 +387,8 @@ h3 {
   max-width: 100%;
   padding-top: 0.5rem;
   background-color: rgb(132, 132, 132);
+  font-family: 'Raleway';
+
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 3px solid rgb(4, 255, 0); */
